@@ -2180,3 +2180,4 @@ Search_failed\:_illegal_search_expression=Search_failed:_illegal_search_expressi
 Show_ArXiv_column=Show_ArXiv_column
 
 You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for=You_must_enter_an_integer_value_in_the_interval_1025-65535_in_the_text_field_for
+Automatically_open_browse_dialog_when_creating_new_file_link=Automatically_open_browse_dialog_when_creating_new_file_link
