@@ -1,3 +1,5 @@
+    - Added option under "External programs" for disabling the automatic opening of the
+      Browse dialog when creating a new file link.
     - Fixed shortcut key collision. Shortcut for Import to new database is now Ctrl-Alt-I.
     - The "Open URL or DOI" action now uses URL links in the "file" field as fallback if
       no links are found in the "url" or "doi" fields.
